force-app/main/default/objects/Account/fields/DeliveryBlockReasonAHS__c.field-meta.xml
<CustomField>
    <fullName>DeliveryBlockReasonAHS__c</fullName>
    <label>Delivery Block Reason (AHS)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Credit Limit</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Political Reasons</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Material Shortage</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Missing Export Documents</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Delivery Cost Check</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>No Print</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Quantity Change</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Kanban Delivery</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>JIT Delivery (PAB)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Delivery Block – Sales</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Delivery Block – Logistics</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Navision Block</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Delivery Block</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Price Change Approval</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Prepayment</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>Cash Sale</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Suspected Cerberus Fraud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>