force-app/main/default/objects/Account/fields/DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNote__c</fullName>
    <label>Delivery Note</label>
    <type>TextArea</type>
</CustomField>