force-app/main/default/objects/Account/fields/DeliveryNoteRestDay__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNoteRestDay__c</fullName>
    <label>Delivery Note Rest Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>