force-app/main/default/objects/Account/fields/DeliveryRoute__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRoute__c</fullName>
    <label>Delivery Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>