force-app/main/default/objects/Account/fields/DeliverySituation__c.field-meta.xml
<CustomField>
    <fullName>DeliverySituation__c</fullName>
    <label>Delivery Situation</label>
    <type>TextArea</type>
</CustomField>