force-app/main/default/objects/Account/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <label>Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>