force-app/main/default/objects/Account/fields/differentBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>differentBillingAddress__c</fullName>
    <label>Different billing address</label>
    <type>Address</type>
</CustomField>