force-app/main/default/objects/Account/fields/DirectDebit__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit__c</fullName>
    <label>Direct Debit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>