force-app/main/default/objects/Account/fields/DoubleOptInAbandonedCart__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInAbandonedCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1090 Granting double opt-in for abandoned cart automated emails (AbandonedCartEmailBatch)</description>
    <label>Double Opt-In (Abandoned Cart)</label>
    <type>Checkbox</type>
</CustomField>