force-app/main/default/objects/Account/fields/DriverHasToRemovePallets__c.field-meta.xml
<CustomField>
    <fullName>DriverHasToRemovePallets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver has to remove pallets</label>
    <type>Checkbox</type>
</CustomField>