force-app/main/default/objects/Account/fields/DunningBlock__c.field-meta.xml
<CustomField>
    <fullName>DunningBlock__c</fullName>
    <label>Dunning Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mahninterface</fullName>
                <label>Dunning interface</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Manual block reason A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Manual block reason B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Dunning reason for capitalization of arrears</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Block reason H</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Blocked by invoice verification</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Dunning reason for deferral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>