force-app/main/default/objects/Account/fields/DunningProcedure__c.field-meta.xml
<CustomField>
    <fullName>DunningProcedure__c</fullName>
    <label>Dunning Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>Four-step dunning, every 14 days (0001)</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Payment reminder, every 14 days</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Four-step dunning, every 14 days, IS-RE forms</label>
            </value>
            <value>
                <fullName>INST</fullName>
                <label>Installment payment dunning procedure</label>
            </value>
            <value>
                <fullName>Z007</fullName>
                <label>Four-step dunning, every 7 days</label>
            </value>
            <value>
                <fullName>Z014</fullName>
                <label>Four-step dunning, every 14 days (Z014)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>