force-app/main/default/objects/Account/fields/DunningRecipient__c.field-meta.xml
<CustomField>
    <fullName>DunningRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dunning Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Dunning Recipient)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>