force-app/main/default/objects/Account/fields/ECommerceVIP__c.field-meta.xml
<CustomField>
    <fullName>ECommerceVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Commerce VIP</label>
    <type>Checkbox</type>
</CustomField>