force-app/main/default/objects/Account/fields/EmailInvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>EmailInvoiceTo__c</fullName>
    <label>Email Invoice To</label>
    <type>Email</type>
</CustomField>