force-app/main/default/objects/Account/fields/Entrance__c.field-meta.xml
<CustomField>
    <fullName>Entrance__c</fullName>
    <label>Entrance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>