force-app/main/default/objects/Account/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>A unique external customer number to identify the correct integration record in the ERP system.</description>
    <externalId>true</externalId>
    <label>ERP Customer Number</label>
    <length>29</length>
    <type>Text</type>
</CustomField>