force-app/main/default/objects/Account/fields/ERPLastSyncAt__c.field-meta.xml
<CustomField>
    <fullName>ERPLastSyncAt__c</fullName>
    <label>ERP Last Sync At</label>
    <type>DateTime</type>
</CustomField>