force-app/main/default/objects/Account/fields/ERPLockStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPLockStatus__c</fullName>
    <description>Indicates whether the record is locked in the ERP system due to compliance checks (e.g., sanction list screening, credit rating validation). Possible values: &apos;Credit Rating&apos;, &apos;Sanction List&apos;, &apos;Not Sanctioned&apos;.</description>
    <label>ERP Lock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Rating</fullName>
            </value>
            <value>
                <fullName>Sanction List</fullName>
            </value>
            <value>
                <fullName>Not Sanctioned</fullName>
            </value>
            <value>
                <fullName>Other Lock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>