force-app/main/default/objects/Account/fields/ERPPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>ERPPaymentTerms__c</fullName>
    <description>Needed for ERP Sync</description>
    <label>ERP Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerms</valueSetName>
    </valueSet>
</CustomField>