force-app/main/default/objects/Account/fields/ERPSystem__c.field-meta.xml
<CustomField>
    <fullName>ERPSystem__c</fullName>
    <label>ERP-System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE_SAP</fullName>
            </value>
            <value>
                <fullName>AT_SAP</fullName>
            </value>
            <value>
                <fullName>DE_Navision</fullName>
            </value>
            <value>
                <fullName>CZ_Navision</fullName>
            </value>
            <value>
                <fullName>SK_Navision</fullName>
            </value>
            <value>
                <fullName>NL_Business Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>