force-app/main/default/objects/Account/fields/EstimatedVolumeOfCoffeePerYearKG__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVolumeOfCoffeePerYearKG__c</fullName>
    <label>EstimatedVolumeOfCoffeePerYearKG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>