force-app/main/default/objects/Account/fields/FTPOrdering__c.field-meta.xml
<CustomField>
    <fullName>FTPOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1670</description>
    <label>FTP Ordering</label>
    <type>Checkbox</type>
</CustomField>