force-app/main/default/objects/Account/fields/HasActiveCustomer__c.field-meta.xml
<CustomField>
    <fullName>HasActiveCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active Customer</label>
    <type>Checkbox</type>
</CustomField>