force-app/main/default/objects/Account/fields/HydraulicRamp__c.field-meta.xml
<CustomField>
    <fullName>HydraulicRamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hydraulic Ramp</label>
    <type>Checkbox</type>
</CustomField>