force-app/main/default/objects/Account/fields/ILNNo__c.field-meta.xml
<CustomField>
    <fullName>ILNNo__c</fullName>
    <description>Unique identifier (ILN) assigned to a business entity in external systems. Format depends on integration requirements.</description>
    <label>ILN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>