force-app/main/default/objects/Account/fields/InvoiceRecipient__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Invoice Recipient)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>