force-app/main/default/objects/Account/fields/InvoiceRecipientContact__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRecipientContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Invoice recipient)</relationshipLabel>
    <relationshipName>InvoiceRecipientContactFor</relationshipName>
    <type>Lookup</type>
</CustomField>