force-app/main/default/objects/Account/fields/InvoiceShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>InvoiceShippingMethod__c</fullName>
    <label>Invoice Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>X-Rechnung</fullName>
            </value>
            <value>
                <fullName>Zugpferd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>