force-app/main/default/objects/Account/fields/IsChainMember__c.field-meta.xml
<CustomField>
    <fullName>IsChainMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chain Member</label>
    <type>Checkbox</type>
</CustomField>