force-app/main/default/objects/Account/fields/IsERPUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsERPUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record has been updated and requires synchronization with the ERP system. If checked, the integration process will include this record in the next data transfer.</description>
    <label>Is ERP Update</label>
    <type>Checkbox</type>
</CustomField>