force-app/main/default/objects/Account/fields/IsProcurementAssociation__c.field-meta.xml
<CustomField>
    <fullName>IsProcurementAssociation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account is a procurement association (buying group). Its members order through it; agreements of the association can apply to members and members can hold deviating agreements.</inlineHelpText>
    <label>Procurement Association</label>
    <type>Checkbox</type>
</CustomField>