force-app/main/default/objects/Account/fields/IsTopAccountCondition__c.field-meta.xml
<CustomField>
    <fullName>IsTopAccountCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Account Condition?</label>
    <type>Checkbox</type>
</CustomField>