force-app/main/default/objects/Account/fields/IsTopAccountStatistic__c.field-meta.xml
<CustomField>
    <fullName>IsTopAccountStatistic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Account Statistic?</label>
    <type>Checkbox</type>
</CustomField>