force-app/main/default/objects/Account/fields/IsWebshopAccount__c.field-meta.xml
<CustomField>
    <fullName>IsWebshopAccount__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Webshop Account</label>
    <type>Checkbox</type>
</CustomField>