force-app/main/default/objects/Account/fields/KeyAccountManager__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Manager (KAM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KeyAccountsManagedBy</relationshipName>
    <type>Lookup</type>
</CustomField>