force-app/main/default/objects/Account/fields/LastDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>LastDeliveryDate__c</fullName>
    <label>Last Delivery Date</label>
    <type>DateTime</type>
</CustomField>