force-app/main/default/objects/Account/fields/LastDunnedOn__c.field-meta.xml
<CustomField>
    <fullName>LastDunnedOn__c</fullName>
    <label>Last Dunned On</label>
    <type>DateTime</type>
</CustomField>