force-app/main/default/objects/Account/fields/LastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceDate__c</fullName>
    <label>Last Invoice Date</label>
    <type>DateTime</type>
</CustomField>