force-app/main/default/objects/Account/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <description>The legal form of the business entity (e.g., GmbH, AG, KG). This determines the company&apos;s structure, liability rules, and governance requirements under commercial law.</description>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>GmbH</fullName>
            </value>
            <value>
                <fullName>KGaA</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>GmbH &amp; Co KG</fullName>
            </value>
            <value>
                <fullName>OHG</fullName>
            </value>
            <value>
                <fullName>GbR</fullName>
            </value>
            <value>
                <fullName>Co., Ltd.</fullName>
            </value>
            <value>
                <fullName>e.K.</fullName>
            </value>
            <value>
                <fullName>eG</fullName>
            </value>
            <value>
                <fullName>e.V.</fullName>
            </value>
            <value>
                <fullName>UG (limited liability)</fullName>
            </value>
            <value>
                <fullName>Sole proprietorship</fullName>
            </value>
            <value>
                <fullName>No legal entity status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>