force-app/main/default/objects/Account/fields/LetterCampaignActivated__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Campaign Activated</label>
    <type>Checkbox</type>
</CustomField>