force-app/main/default/objects/Account/fields/LetterCampaignBonusUsed__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignBonusUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Campaign Bonus Used</label>
    <type>Checkbox</type>
</CustomField>