force-app/main/default/objects/Account/fields/LetterCampaignFreeItem2__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignFreeItem2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Campaign Free Item 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts (Letter Campaign Free Item 2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>