force-app/main/default/objects/Account/fields/LetterCampaignFreeItem__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignFreeItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Campaign Free Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>