force-app/main/default/objects/Account/fields/ListFilterAccount__c.field-meta.xml
<CustomField>
    <fullName>ListFilterAccount__c</fullName>
    <formula>If(and( or( OwnerId = $User.Id , SupervisedByTenantUserID__c = $User.Id , ResponsibleUser__c = $User.Id ,  KeyAccountManager__c = $User.Id ), Or(Status__c = &quot;Approved&quot;, Status__c = &quot;Activ&quot;)) , true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Filter Account</label>
    <type>Checkbox</type>
</CustomField>