force-app/main/default/objects/Account/fields/MachineCeditLimit__c.field-meta.xml
<CustomField>
    <fullName>MachineCeditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>