force-app/main/default/objects/Account/fields/MachineCrefoIndex__c.field-meta.xml
<CustomField>
    <fullName>MachineCrefoIndex__c</fullName>
    <label>Crefo Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>