force-app/main/default/objects/Account/fields/MachineRequirements__c.field-meta.xml
<CustomField>
    <fullName>MachineRequirements__c</fullName>
    <label>Machine Requirements</label>
    <type>TextArea</type>
</CustomField>