force-app/main/default/objects/Account/fields/MarkedForDeletion__c.field-meta.xml
<CustomField>
    <fullName>MarkedForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked For Deletion</label>
    <type>Checkbox</type>
</CustomField>