force-app/main/default/objects/Account/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <label>Member Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>