force-app/main/default/objects/Account/fields/NumberBrandAssignments__c.field-meta.xml
<CustomField>
    <fullName>NumberBrandAssignments__c</fullName>
    <description>CRM-1669</description>
    <label>Number Brand Assignments</label>
    <summaryForeignKey>AccountBrandAssignment__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>